# wllegal

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .weblate  MANIFEST.in  README.rst  REUSE.toml  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-optional.txt  requirements-setup.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/actions/pre-commit-setup/: action.yml
.github/workflows/: codeql-analysis.yml  setup.yml  test.yml
.reuse/: dep5
json/: ar.json  ast.json  az.json  ba.json  be.json  be_Latn.json  ber.json  bg.json  bn.json  bn_BD.json  br.json  ca.json  ckb.json  crh.json  cs.json  cy.json  da.json  de.json  el.json  en.json  en_GB.json  en_US.json  eo.json  es.json  et.json  eu.json  fa.json  fi.json  fil.json  fr.json  fur.json  ga.json  gl.json  he.json  hi.json  hi_Latn.json  hr.json  hu.json  hy.json  id.json  (+48 more)
scripts/: accept_invitations  update-locales
wllegal/: __init__.py  apps.py  models.py  settings_test.py  tests.py
wllegal/locale/: django.pot
wllegal/locale/ab/LC_MESSAGES/: django.po
wllegal/locale/ach/LC_MESSAGES/: django.po
wllegal/locale/af/LC_MESSAGES/: django.po
wllegal/locale/afh/LC_MESSAGES/: django.po
wllegal/locale/ang/LC_MESSAGES/: django.po
wllegal/locale/apc/LC_MESSAGES/: django.po
wllegal/locale/ar/LC_MESSAGES/: django.po
wllegal/locale/ar_LY/LC_MESSAGES/: django.po
wllegal/locale/ars/LC_MESSAGES/: django.po
wllegal/locale/arz/LC_MESSAGES/: django.po
wllegal/locale/ast/LC_MESSAGES/: django.po
wllegal/locale/awa/LC_MESSAGES/: django.po
wllegal/locale/az/LC_MESSAGES/: django.po
wllegal/locale/ba/LC_MESSAGES/: django.po
wllegal/locale/ba_LATN/LC_MESSAGES/: django.po
wllegal/locale/bar/LC_MESSAGES/: django.po
wllegal/locale/be/LC_MESSAGES/: django.po
wllegal/locale/be@latin/LC_MESSAGES/: django.po
wllegal/locale/be_Latn/LC_MESSAGES/: django.po
wllegal/locale/ber/LC_MESSAGES/: django.po
wllegal/locale/bg/LC_MESSAGES/: django.po
wllegal/locale/bn/LC_MESSAGES/: django.po
wllegal/locale/bn_BD/LC_MESSAGES/: django.po
wllegal/locale/bnt/LC_MESSAGES/: django.po
wllegal/locale/bo/LC_MESSAGES/: django.po
wllegal/locale/br/LC_MESSAGES/: django.po
wllegal/locale/ca/LC_MESSAGES/: django.po
wllegal/locale/ce/LC_MESSAGES/: django.po
wllegal/locale/chn/LC_MESSAGES/: django.po
wllegal/locale/ckb/LC_MESSAGES/: django.po
wllegal/locale/crh/LC_MESSAGES/: django.po
wllegal/locale/cs/LC_MESSAGES/: django.po
wllegal/locale/cv/LC_MESSAGES/: django.po
wllegal/locale/cy/LC_MESSAGES/: django.po
wllegal/locale/da/LC_MESSAGES/: django.po
wllegal/locale/de/LC_MESSAGES/: django.po
wllegal/locale/dv/LC_MESSAGES/: django.po
wllegal/locale/el/LC_MESSAGES/: django.po
wllegal/locale/en_GB/LC_MESSAGES/: django.po
wllegal/locale/en_US/LC_MESSAGES/: django.po
wllegal/locale/en_devel/LC_MESSAGES/: django.po
wllegal/locale/enm/LC_MESSAGES/: django.po
wllegal/locale/eo/LC_MESSAGES/: django.po
wllegal/locale/es/LC_MESSAGES/: django.po
wllegal/locale/es_419/LC_MESSAGES/: django.po
wllegal/locale/et/LC_MESSAGES/: django.po
wllegal/locale/eu/LC_MESSAGES/: django.po
wllegal/locale/fa/LC_MESSAGES/: django.po
wllegal/locale/fi/LC_MESSAGES/: django.po
wllegal/locale/fil/LC_MESSAGES/: django.po
wllegal/locale/fr/LC_MESSAGES/: django.po
wllegal/locale/fur/LC_MESSAGES/: django.po
wllegal/locale/fy/LC_MESSAGES/: django.po
wllegal/locale/ga/LC_MESSAGES/: django.po
wllegal/locale/gl/LC_MESSAGES/: django.po
wllegal/locale/he/LC_MESSAGES/: django.po
wllegal/locale/hi/LC_MESSAGES/: django.po
wllegal/locale/hi_Latn/LC_MESSAGES/: django.po
wllegal/locale/hr/LC_MESSAGES/: django.po
wllegal/locale/hu/LC_MESSAGES/: django.po
wllegal/locale/hy/LC_MESSAGES/: django.po
wllegal/locale/ia/LC_MESSAGES/: django.po
wllegal/locale/id/LC_MESSAGES/: django.po
wllegal/locale/ie/LC_MESSAGES/: django.po
wllegal/locale/ig/LC_MESSAGES/: django.po
wllegal/locale/is/LC_MESSAGES/: django.po
wllegal/locale/it/LC_MESSAGES/: django.po
wllegal/locale/ja/LC_MESSAGES/: django.po
wllegal/locale/ka/LC_MESSAGES/: django.po
wllegal/locale/kab/LC_MESSAGES/: django.po
wllegal/locale/kk/LC_MESSAGES/: django.po
wllegal/locale/km/LC_MESSAGES/: django.po
wllegal/locale/kmr/LC_MESSAGES/: django.po
wllegal/locale/kn/LC_MESSAGES/: django.po
wllegal/locale/ko/LC_MESSAGES/: django.po
wllegal/locale/ksh/LC_MESSAGES/: django.po
wllegal/locale/ku/LC_MESSAGES/: django.po
wllegal/locale/kw/LC_MESSAGES/: django.po
wllegal/locale/ln/LC_MESSAGES/: django.po
wllegal/locale/lo/LC_MESSAGES/: django.po
wllegal/locale/lt/LC_MESSAGES/: django.po
wllegal/locale/lv/LC_MESSAGES/: django.po
wllegal/locale/lzh/LC_MESSAGES/: django.po
wllegal/locale/mg/LC_MESSAGES/: django.po
wllegal/locale/mk/LC_MESSAGES/: django.po
wllegal/locale/ml/LC_MESSAGES/: django.po
wllegal/locale/mn/LC_MESSAGES/: django.po
wllegal/locale/mr/LC_MESSAGES/: django.po
wllegal/locale/mrh/LC_MESSAGES/: django.po
wllegal/locale/ms/LC_MESSAGES/: django.po
wllegal/locale/my/LC_MESSAGES/: django.po
wllegal/locale/nb/LC_MESSAGES/: django.po
wllegal/locale/nl/LC_MESSAGES/: django.po
wllegal/locale/nn/LC_MESSAGES/: django.po
wllegal/locale/oc/LC_MESSAGES/: django.po
wllegal/locale/oc_ES/LC_MESSAGES/: django.po
wllegal/locale/or/LC_MESSAGES/: django.po
wllegal/locale/pa/LC_MESSAGES/: django.po
wllegal/locale/pa_PK/LC_MESSAGES/: django.po
wllegal/locale/peo/LC_MESSAGES/: django.po
wllegal/locale/pl/LC_MESSAGES/: django.po
wllegal/locale/pl_CARES/LC_MESSAGES/: django.po
wllegal/locale/ps/LC_MESSAGES/: django.po
wllegal/locale/pt/LC_MESSAGES/: django.po
wllegal/locale/pt_BR/LC_MESSAGES/: django.po
wllegal/locale/pt_PT/LC_MESSAGES/: django.po
wllegal/locale/qpv/LC_MESSAGES/: django.po
wllegal/locale/ro/LC_MESSAGES/: django.po
wllegal/static/wllegal/: legal.css
wllegal/templates/: security.txt  weblate_503.html  weblate_50x.html
wllegal/templates/legal/: styles.html
wllegal/templatetags/: lawlinks.py  wllegal.py
(+40 files in other folders)
