[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "translate-toolkit"
]

[project]
authors = [
  {name = "Michal Čihař", email = "michal@cihar.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
  "Django>=5.0,<5.2"
]
description = "Hosted Weblate legal stuff"
keywords = [
  "i18n",
  "l10n",
  "gettext",
  "git",
  "mercurial",
  "translate"
]
name = "wllegal"
requires-python = ">=3.11"
version = "2024.4"

[project.license]
text = "GPL-3.0-or-later"

[project.optional-dependencies]
dev = [
  "wllegal[lint,test]"
]
lint = [
  "pre-commit==4.0.1"
]
test = [
  "wllegal[weblate]",
  "coverage==7.6.4",
  "translate-toolkit"
]
weblate = [
  "Weblate[postgres]>=5.0"
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Documentation = "https://docs.weblate.org/"
Download = "https://github.com/WeblateOrg/wllegal"
Homepage = "https://weblate.org/"
"Issue Tracker" = "https://github.com/WeblateOrg/wllegal/issues"
"Source Code" = "https://github.com/WeblateOrg/wllegal"
Twitter = "https://twitter.com/WeblateOrg"

[tool.black]
target-version = ['py39']

[tool.check-manifest]
ignore = [
  "LICENSES/*",
  "json/*",
  ".reuse/dep5",
  "scripts/*",
  "*.toml",
  "*.yml",
  "*.yaml",
  "*.json",
  ".editorconfig",
  ".weblate"
]

[tool.coverage.paths]
source = [
  "."
]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  # Type checking
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
branch = true
concurrency = ["thread", "multiprocessing"]
omit = [
  ".venv*/*"
]

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
  "D10",  # TODO: we are missing many docstrings
  "D203",  # CONFIG: incompatible with D211
  "D212",  # CONFIG: incompatible with D213
  "E501",  # WONTFIX: we accept long strings (rest is formatted by black)
  "RUF001",  # WONTFIX: String contains ambiguous unicode character, we are using Unicode
  "RUF012"  # TODO: Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  "E",
  "F",
  "B",
  "T10",
  "A",
  "C4",
  "C90",
  "YTT",
  "DJ",
  "UP",
  "D",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "RUF",
  "ERA",
  "ICN",
  "ISC",
  "EXE",
  "INP",
  "PIE",
  "G",
  "PYI",
  "Q",
  "SIM",
  "TID",
  "RSE",
  "T20",
  "RET",
  "SLF",
  "N"
]
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 16

[tool.setuptools]
include-package-data = true
license-files = [
  "LICENSE"
]
platforms = [
  "any"
]

[tool.setuptools.package-dir]
wllegal = "wllegal"

[tool.setuptools.packages.find]
namespaces = true
