[metadata]
name = wllegal
version = 2021.7
description = Hosted Weblate legal stuff
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://weblate.org/
author = Michal Čihař
author_email = michal@cihar.com
license = GPL-3.0-or-later
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
download_url = https://github.com/WeblateOrg/wllegal
keywords = i18n l10n gettext git mercurial translate
project_urls =
    Issue Tracker=https://github.com/WeblateOrg/wllegal/issues
    Documentation=https://docs.weblate.org/
    Source Code=https://github.com/WeblateOrg/wllegal
    Twitter=https://twitter.com/WeblateOrg

[options]
packages = wllegal
python_requires = >=3.6
include_package_data = 1
package_dir = wllegal=wllegal

[flake8]
max-complexity = 16
extend-select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,DJ,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
extend-ignore = D10,D200,D202,D204,D205,D209,D400,D401,DJ01,DJ02,T201
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules
max-line-length = 88

[pycodestyle]
extend-select = E,W1,W2,W3,W504,W505,W6
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = wllegal
known_third_party = weblate,django,translate
